--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="/dist/css/home.css" rel="stylesheet" type="text/css" />
+    <link href="/home.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <script src="/dist/js/home.min.js" rel="script" type="text/javascript"></script>
+    <script src="/home.min.js" rel="script" type="text/javascript"></script>
     <title>Home</title>
 </head>
 <body>
-    <h1>DUCK</h1>
     <header>
         <nav class="navbar navbar--animate">
             <div class="navbar__logo">
