--- a/src/views/login.html
+++ b/src/views/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The login page for Triple Investors" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="/dist/css/login.css" rel="stylesheet" type="text/css" />
+    <link href="/login.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <title>Login</title>
 </head>
