--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,6 +10,7 @@
     <title>Home</title>
 </head>
 <body>
+    <h2>tangerine</h2>
     <header>
         <nav class="navbar navbar--animate">
             <div class="navbar__logo">
