--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,7 +18,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Raleway", 'M PLUS Rounded 1c', "sans-serif";
-    color: yellow;
+    color: black;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
