HMR fixed for SCSS -- NODE_ENV wasn't being correctly set. Need some equivalent of webpack-dev-server watchContentBase compatible with webpack-dev-middleware on HTML.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -52,7 +52,8 @@ main {
 
 .navbar {
     display: flex;
-    background-color: var(--light-theme-navbar-bg);
+    // background-color: var(--light-theme-navbar-bg);
+    background-color: purple;
     color: black;
     font-size: 18px;
     height: 2em;
