--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -6,7 +6,7 @@ main {
 }
 
 .hero {
-    background: radial-gradient(rgba(255,255,255,0.1), rgba(0,0,0,0.5)), url("../assets/workspace.jpg");
+    background: radial-gradient(rgba(255,255,255,0.1), rgba(0,0,0,0.5)), url("/assets/workspace.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
