--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,27 +10,7 @@
     <title>Home</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar--animate">
-            <div class="navbar__logo">
-                <a href="/"><i class="fa fa-anchor" aria-hidden="true"></i> Triple Investors</a>
-            </div>
-            <ul class="navbar__items">
-                <li>
-                    <a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-info-circle" aria-hidden="true"></i> About</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i> Opportunities</a>
-                </li>
-                <li>
-                    <a href="login.html" class="loginLink"><i class="fa fa-user" aria-hidden="true"></i> Login</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <%- include('partials/navbar'); -%>
     <main>
         <section class="hero">
             <div class="hero__body">
@@ -87,67 +67,6 @@
             </div>
         </section>
     </main>
-    <footer>
-        <!-- ROW 1 -->
-        <h2>
-            Company Info
-        </h2>
-        <h2>
-            Company Culture
-        </h2>
-        <h2>
-            Help
-        </h2>
-        <!-- ROW 2 -->
-        <a href="#">
-            Our site
-        </a>
-        <a href="#">
-            How we treat each other
-        </a>
-        <a href="#">
-            FAQ
-        </a>
-        <!-- ROW 3 -->
-        <a href="#">
-            Benefits
-        </a>
-        <a href="#">
-            Equal Treatment
-        </a>
-        <a href="#">
-            Privacy
-        </a>
-        <!-- ROW 4 -->
-        <a href="#">
-            Our founder, Mr. Money
-        </a>
-        <a href="#">
-            Expectations
-        </a>
-        <!-- ROW 5, social media plugs, copyright -->
-        <div class="footer-bottom">
-            <p class="copyright">
-                <i class="fa fa-copyright" aria-hidden="true"></i> &nbsp; 2020 Triple Investors
-            </p>
-            <div class="plugs">
-                <a href="https://twitter.com/TripleInvestors?ref_src=twsrc%5Etfw" class="icon icon--twitter">
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="https://facebook.com" class="icon icon--facebook">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="https://instagram.com" class="icon icon--instagram">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="https://pinterest.com" class="icon icon--pinterest">
-                    <i class="fa fa-pinterest" aria-hidden="true"></i>
-                </a>
-                <a href="https://blogger.com" class="icon icon--rss">
-                    <i class="fa fa-rss" aria-hidden="true"></i>
-                </a>
-            </div>
-        </div>
-    </footer>
+    <%- include("partials/footer"); -%>
 </body>
 </html>
