--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,6 +12,9 @@
 <body>
     <%- include('partials/navbar'); -%>
     <main>
+        <% data.forEach((item) => { %>
+            <h4><%= item %></h4>
+        <% }) %>
         <section class="hero">
             <div class="hero__body">
                 <p>Innovating. Solving. <b><em>Doing</em></b>.</p>
