--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -47,9 +47,9 @@
                             only the most up to date version of <a href="https://products.office.com/en-us/excel">Microsoft Excel</a>
                             is used. We rely on the blazing fast CSV utilities for analyzing our data with such high tech methods like:
                             <ul class="grid-table">
-                                <li>Pivot Tables <i class="fa fa-table" aria-hidden="true"></i></li>
-                                <li>Pie Charts <i class="fa fa-pie-chart" aria-hidden="true"></i></li>
-                                <li>Queries <i class="fa fa-question" aria-hidden="true"></i></li>
+                                <li><span>Pivot Tables</span><i class="fa fa-table" aria-hidden="true"></i></li>
+                                <li><span>Pie Charts</span><i class="fa fa-pie-chart" aria-hidden="true"></i></li>
+                                <li><span>Queries</span><i class="fa fa-question" aria-hidden="true"></i></li>
                             </ul>
                         </p>
                     </div>
