--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,43 +1,45 @@
 <footer>
-    <!-- ROW 1 -->
-    <h2>
-        Company Info
-    </h2>
-    <h2>
-        Company Culture
-    </h2>
-    <h2>
-        Help
-    </h2>
-    <!-- ROW 2 -->
-    <a href="#">
-        Our site
-    </a>
-    <a href="#">
-        How we treat each other
-    </a>
-    <a href="#">
-        FAQ
-    </a>
-    <!-- ROW 3 -->
-    <a href="#">
-        Benefits
-    </a>
-    <a href="#">
-        Equal Treatment
-    </a>
-    <a href="#">
-        Privacy
-    </a>
-    <!-- ROW 4 -->
-    <a href="#">
-        Our founder, Mr. Money
-    </a>
-    <a href="#">
-        Expectations
-    </a>
+    <div class="footer__company-info">
+        <h2>
+            Company Info
+        </h2>
+        <a href="#">
+            Our site
+        </a>
+        <a href="#">
+            Benefits
+        </a>
+        <a href="#">
+            Our founder, Mr. Money
+        </a>
+    </div>
+    <div class="footer__company-culture">
+        <h2>
+            Company Culture
+        </h2>
+        <a href="#">
+            How we treat each other
+        </a>
+        <a href="#">
+            Equal Treatment
+        </a>
+        <a href="#">
+            Expectations
+        </a>
+    </div>
+    <div class="footer__company-help">
+        <h2>
+            Help
+        </h2>
+        <a href="#">
+            FAQ
+        </a>
+        <a href="#">
+            Privacy
+        </a>
+    </div>
     <!-- ROW 5, social media plugs, copyright -->
-    <div class="footer-bottom">
+    <div class="footer__bottom">
         <p class="copyright">
             <i class="fa fa-copyright" aria-hidden="true"></i> &nbsp; 2020 Triple Investors
         </p>
