--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -14,7 +14,7 @@
                 <a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i> Opportunities</a>
             </li>
             <li>
-                <a href="login.html" class="loginLink"><i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                <a href="login" class="loginLink"><i class="fa fa-user" aria-hidden="true"></i> Login</a>
             </li>
         </ul>
     </nav>
