--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,11 +24,6 @@ body {
     justify-content: space-between;
 }
 
-main {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
 .navbar a {
     text-decoration: none;
     color: inherit;
@@ -56,7 +51,7 @@ main {
     // background-color: purple;
     color: black;
     font-size: 18px;
-    height: 2em;
+    min-height: 2em;
     padding: 0.5em;
     font-family: 'M PLUS Rounded 1c';
     /* clip-path: inset(0% 100% 0% 0%); */
@@ -112,7 +107,7 @@ main {
     padding: 0;
     list-style-type: none;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
     flex-grow: 1;
@@ -124,6 +119,7 @@ main {
     padding-left: 0.5em;
     white-space: nowrap;
     margin-right: 2em;
+    align-self: center;
     /* text-shadow: 1px 1px rgba(255,255,255,0.5); */
     color: rgb(30, 146, 255);
 }
@@ -162,26 +158,49 @@ main {
 } */
 
 footer {
-    color: white;
+    color: white !important;
     display: grid;
+    grid-template: "info culture help"
+                   "info culture help"
+                   "info culture help"
+                   "info culture help";
     grid-gap: 0em 1em;
-    grid-template-rows: 2fr repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
     padding: 1em;
     margin-top: 5em;
     background-color: black;
 }
 
-footer > a {
-    color: inherit;
-    margin-top: 10px;
+// footer > .footer__company-info,
+// footer > .footer__company-culture,
+// footer > .footer__company-help {
+//     display: grid;
+//     grid-template-rows: repeat(4, 60px);
+// }
+
+footer > .footer__company-info {
+    grid-area: info;
 }
 
-footer > a:hover {
+footer > .footer__company-culture {
+    grid-area: culture;
+}
+
+footer > .footer__company-help {
+    grid-area: help;
+}
+
+footer > div > a {
+    color: inherit;
+    margin-top: 10px;
+    display: block;
+}
+
+footer > div > a:hover {
     color: cyan;
 }
 
-.footer-bottom {
+.footer__bottom {
     margin-top: 1em;
     display: flex;
     grid-area: 5 / 1 / 5 / span 3;
@@ -190,13 +209,13 @@ footer > a:hover {
     padding-top: 10px;
 }
 
-.footer-bottom > .plugs {
+.footer__bottom > .plugs {
     display: flex;
     grid-area: 5 / 1 / 5 / span 3;
     align-items: center;
 }
 
-.footer-bottom > .plugs > .icon {
+.footer__bottom > .plugs > .icon {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -208,7 +227,7 @@ footer > a:hover {
     margin-right: 1em;
 }
 
-.footer-bottom > .plugs > .icon:hover {
+.footer__bottom > .plugs > .icon:hover {
     box-shadow: 1px 2px 20px 5px rgba(255,255,255,0.5)
 }
 
