--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -5,6 +5,10 @@ main {
     grid-template-columns: repeat(3, 1fr)
 }
 
+input {
+    display: block;
+}
+
 .card--login {
     grid-column-start: 2;
     place-self: center;
@@ -12,6 +16,7 @@ main {
 
 .card--login form {
     display: grid;
+    grid-gap: 0px 20px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(2, 1fr);
     justify-content: center;
