--- a/src/views/_template.ejs
+++ b/src/views/_template.ejs
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/success.css" rel="stylesheet" type="text/css" />
+    <link href="/global.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <title>Success!</title>
+    <title>Title</title>
 </head>
 <body>
     <%- include("partials/navbar") %>
     <main>
-        <h1 style="color:lawngreen">
-            Successfully logged in!
-        </h1>
+
     </main>
     <%- include("partials/footer") %>
 </body>
