--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -27,6 +27,20 @@
                     Submit
                 </button>
             </form>
+            <h2 style="margin-top: 100px;">Register</h2>
+            <form action="/signup" method="POST" style="background-color: lavender">
+                <label>
+                    Email
+                    <input id="email" name="email" type="email" />
+                </label>
+                <label>
+                    Password
+                    <input id="password" name="password" type="password" />
+                </label>
+                <button>
+                    Submit
+                </button>
+            </form>
         </div>
     </main>
     <%- include("partials/footer") -%>
